fix: tweak subtle spacing

--- a/src/annotations/components/controlBar/AnnotationPills.scss
+++ b/src/annotations/components/controlBar/AnnotationPills.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: $cf-border;
+  padding: 0 $cf-border;
 }
 
 .annotation-pill {
@@ -54,5 +54,13 @@
   &:hover {
     cursor: pointer;
     color: $g18-cloud;
+  }
+
+  &:active {
+    color: $c-dreamsicle;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
